[package]
name = "alert-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.79"
description = "⚠️ A highly customizable alert component for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["alert", "yew", "rust", "dioxus", "leptos"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/alert-rs"
documentation = "https://docs.rs/alert-rs/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["timers"], optional = true }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["Window"] }
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.6.3", optional = true }
leptos = { version = "0.7.7", optional = true }

[features]
yew = ["dep:yew", "gloo"]
dio = ["dioxus", "gloo"]
lep = ["leptos"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
log = "0.4.22"
bump2version = "0.1.4"
